feat: add prvki

--- a/templates/bitrix.html
+++ b/templates/bitrix.html
@@ -22,9 +22,9 @@
       <div class="col-xxl-auto col-lg-6 col-md-10" data-aos-duration="1000" data-aos="fade-right" data-aos-delay="300">
         <div class="home-1_hero-content">
           <div class="home-1_hero-content-text">
-            <h1 class="hero-content__title heading-xxl">
+            <h1 class="hero-content__title heading-xl">
               Битрикс24
-              Помогает бизнесу работать
+              помогает бизнесу работать
             </h1>
             <p>
               А мы знаем, как Правильно Внедрить Битрикс24 в процессы вашей компании.
@@ -66,49 +66,49 @@
   </div>
   <div class="section-padding bg-light-2">
     <div class="container">
-      <div class="row justify-content-center gy-5 pb-5">
-        <div class="col-6 col-sm-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+      <div class="grid grid--5 gy-5 pb-5">
+        <div class="grid__elem">
           <img class="w-25" src="{% static '/image/bitrix/video_and_chat.svg' %}" alt="bitrix image">
           <p class="text-center">Бесплатные видеозвонки до 100 человек</p>
         </div>
-        <div class="col-6 col-sm-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+        <div class="grid__elem">
           <img class="w-25" src="{% static '/image/bitrix/chats.svg' %}" alt="bitrix image">
           <p class="text-center">Чат для совместной работы</p>
         </div>
-        <div class="col-6 col-sm-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+        <div class="grid__elem">
           <img class="w-25" src="{% static '/image/bitrix/calendar.svg' %}" alt="bitrix image">
           <p class="text-center">Общий календарь встреч с коллегами</p>
         </div>
-        <div class="col-6 col-sm-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+        <div class="grid__elem">
           <img class="w-25" src="{% static '/image/bitrix/calendar.svg' %}" alt="bitrix image">
           <p class="text-center">Общий календарь встреч с коллегами</p>
         </div>
-        <div class="col-6 col-sm-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+        <div class="grid__elem">
           <img class="w-25" src="{% static '/image/bitrix/files.svg' %}" alt="bitrix image">
           <p class="text-center">Работа с файлами на общем диске</p>
         </div>
-        <div class="col-6 col-sm-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+        <div class="grid__elem">
           <img class="w-25" src="{% static '/image/bitrix/emails.svg' %}" alt="bitrix image">
           <p class="text-center">Корпоративная почта</p>
         </div>
-        <div class="col-6 col-sm-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+        <div class="grid__elem">
           <img class="w-25" src="{% static '/image/bitrix/knowledges.svg' %}" alt="bitrix image">
           <p class="text-center">База знаний</p>
         </div>
-        <div class="col-6 col-sm-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+        <div class="grid__elem">
           <img class="w-25" src="{% static '/image/bitrix/time.svg' %}" alt="bitrix image">
           <p class="text-center">Учет рабочего времени</p>
         </div>
-        <div class="col-6 col-sm-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+        <div class="grid__elem">
           <img class="w-25" src="{% static '/image/bitrix/news.svg' %}" alt="bitrix image">
           <p class="text-center">Новости компании</p>
         </div>
-        <div class="col-6 col-sm-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+        <div class="grid__elem">
           <img class="w-25" src="{% static '/image/bitrix/assistant.svg' %}" alt="bitrix image">
           <p class="text-center">CoPilot — ваш личный ассистент</p>
         </div>
       </div>
-      <div class="text-center">
+      <div class="text-center mt-5">
         <a href="#" class="btn-masco btn-masco--header rounded-pill btn-fill--up">
           <span>Попробовать бесплатно</span>
         </a>
@@ -135,41 +135,41 @@
   </div>
   <div class="section-padding bg-light-2">
     <div class="container">
-      <div class="row justify-content-center gy-5 pb-5">
-        <div class="col-6 col-sm-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+      <div class="grid grid--4 gy-5 pb-5">
+        <div class="grid__elem">
           <img class="w-25" src="{% static '/image/bitrix/knowledges.svg' %}" alt="bitrix image">
           <p class="text-center">CRM</p>
         </div>
-        <div class="col-6 col-sm-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+        <div class="grid__elem">
           <img class="w-25" src="{% static '/image/bitrix/chats.svg' %}" alt="bitrix image">
           <p class="text-center">Сбор лидов из всех каналов</p>
         </div>
-        <div class="col-6 col-sm-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+        <div class="grid__elem">
           <img class="w-25" src="{% static '/image/bitrix/emails.svg' %}" alt="bitrix image">
           <p class="text-center">История каждой сделки</p>
         </div>
-        <div class="col-6 col-sm-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+        <div class="grid__elem">
           <img class="w-25" src="{% static '/image/bitrix/video_and_chat.svg' %}" alt="bitrix image">
           <p class="text-center">Автоматизация продаж</p>
         </div>
-        <div class="col-6 col-sm-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+        <div class="grid__elem">
           <img class="w-25" src="{% static '/image/bitrix/calendar.svg' %}" alt="bitrix image">
           <p class="text-center">Планы продаж и отчеты</p>
         </div>
-        <div class="col-6 col-sm-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+        <div class="grid__elem">
           <img class="w-25" src="{% static '/image/bitrix/files.svg' %}" alt="bitrix image">
           <p class="text-center">Интеграция с 1С</p>
         </div>
-        <div class="col-6 col-sm-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+        <div class="grid__elem">
           <img class="w-25" src="{% static '/image/bitrix/calendar.svg' %}" alt="bitrix image">
           <p class="text-center">Сегментация клиентов</p>
         </div>
-        <div class="col-6 col-sm-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+        <div class="grid__elem">
           <img class="w-25" src="{% static '/image/bitrix/news.svg' %}" alt="bitrix image">
           <p class="text-center">Рассылки</p>
         </div>
       </div>
-      <div class="text-center">
+      <div class="text-center mt-5">
         <a href="#" class="btn-masco btn-masco--header rounded-pill btn-fill--up">
           <span>Попробовать бесплатно</span>
         </a>
@@ -198,34 +198,38 @@
     </div>
     <div class="section-padding bg-light-2">
       <div class="container">
-        <div class="row justify-content-center gy-5 pb-5">
-          <div class="col-6 col-sm-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+        <div class="grid grid--4 gy-5 pb-5">
+          <div class="grid__elem">
             <img class="w-25" src="{% static '/image/bitrix/emails.svg' %}" alt="bitrix image">
             <p class="text-center">Постановка задач в 2 клика</p>
           </div>
-          <div class="col-6 col-sm-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+          <div class="grid__elem">
             <img class="w-25" src="{% static '/image/bitrix/chats.svg' %}" alt="bitrix image">
             <p class="text-center">Управление проектами в разных режимах</p>
           </div>
-          <div class="col-6 col-sm-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+          <div class="grid__elem">
             <img class="w-25" src="{% static '/image/bitrix/news.svg' %}" alt="bitrix image">
             <p class="text-center">Мобильное приложение</p>
           </div>
-          <div class="col-6 col-sm-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+          <div class="grid__elem">
             <img class="w-25" src="{% static '/image/bitrix/video_and_chat.svg' %}" alt="bitrix image">
             <p class="text-center">Шаблоны задач и роботы</p>
           </div>
-          <div class="col-6 col-sm-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+          <div class="grid__elem">
             <img class="w-25" src="{% static '/image/bitrix/knowledges.svg' %}" alt="bitrix image">
             <p class="text-center">История каждой задачи</p>
           </div>
-          <div class="col-6 col-sm-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+          <div class="grid__elem">
             <img class="w-25" src="{% static '/image/bitrix/calendar.svg' %}" alt="bitrix image">
             <p class="text-center">Роли и права доступа</p>
           </div>
-          <div class="col-6 col-sm-4 col-lg-3 col-xl-2 d-flex flex-column align-items-center">
+          <div class="grid__elem">
             <img class="w-25" src="{% static '/image/bitrix/files.svg' %}" alt="bitrix image">
             <p class="text-center">KPI и отчеты</p>
+          </div>
+          <div class="grid__elem">
+            <img class="w-25" src="{% static '/image/bitrix/assistant.svg' %}" alt="bitrix image">
+            <p class="text-center">CoPilot — ваш личный ассистент</p>
           </div>
         </div>
         <div class="text-center">
