--- a/templates/bitrix.html
+++ b/templates/bitrix.html
@@ -178,9 +178,7 @@
   </div>
 </div>
 
-
-
-  <div class="section-padding-120">
+ <div class="section-padding-120">
     <div class="container">
       <div class="section-padding pt-0">
         <div class="row gy-5">
@@ -240,7 +238,476 @@
       </div>
   </div>
     
-
+  <div class="section-padding-120">
+    <div class="container">
+      <h2 class="content-title heading-md text-black text-center">Битрикс24 — это полный набор инструментов</h2>
+      <p class="text-center">
+        Цены указаны за всю компанию, а не за отдельных пользователей
+      </p>
+      <div class="text-center mt-5">
+        <a href="#" class="btn-masco btn-masco--header rounded-pill btn-fill--up">
+          <span>На месяц</span>
+        </a>
+        <a href="#" class="btn-masco btn-masco--header rounded-pill btn-fill--up">
+          <span>На год</span>
+        </a>
+      </div>
+      <div class="plans mt-5">
+        <div class="plan plan--lemon">
+          <div class="plan__header p-3 text-center">
+            <div class="service-card__title mt-2">
+                Бесплатный
+            </div>
+            <p>Начните работать онлайн и продавать больше с CRM</p>
+          </div>
+          <div class="plan__content p-4 d-flex flex-column justify-content-between">
+                <div>
+                  <div class="text-center p-2">
+                    <div>
+                      <b>неограниченно <br>пользователей</b>
+                    </div>
+                    <div class="service-card__title mt-2">
+                      Бесплатно
+                    </div>
+                    <a href="#" class="btn-masco btn-masco--header rounded-pill btn-fill--up mt-4">
+                      <span>Создать</span>
+                    </a>
+                    <div class="mt-4">
+                      <b>5 ГБ</b>
+                    </div>
+                </div>
+                <div class="plan__line mt-4"></div>
+                <div class="">
+                  <div class="plan__subtitle">
+                    <b>Совместная работа</b>
+                    <ul class="ms-3">
+                      <li class="pt-2">Календарь</li>
+                      <li class="pt-2">Соцсеть компании</li>
+                      <li class="pt-2">Лента</li>
+                      <li class="pt-2">Доски</li>
+                      <li class="pt-2">База знаний</li>
+                    </ul>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Мессенджер</b>
+                    <ul class="ms-3">
+                      <li class="pt-2">Чат</li>
+                      <li class="pt-2">Каналы</li>
+                      <li class="pt-2">Битрикс24 Синк</li>
+                    </ul>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Коллабы</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Задачи и проекты</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>CRM</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>CoPilot</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Онлайн-подпись</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Диск</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Контакт-центр</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Сайты</b>
+                  </div>
+                </div>
+              </div>
+              <div></div>
+          </div>
+        </div>
+        <div class="plan plan--cyan">
+          <div class="plan__header p-3 text-center">
+            <div class="service-card__title mt-2">
+                Базовый
+            </div>
+            <p>CRM для небольших отделов продаж</p>
+          </div>
+          <div class="plan__content p-4 d-flex flex-column justify-content-between">
+                <div>
+                  <div class="text-center p-2">
+                    <div>
+                      <b>5 <br> пользователей</b>
+                    </div>
+                    <div class="service-card__title mt-2">
+                      55 BYN/мес
+                    </div>
+                    <a href="#" class="btn-masco btn-masco--header rounded-pill btn-fill--up mt-4">
+                      <span>Создать</span>
+                    </a>
+                    <div class="mt-4">
+                      <b>24 ГБ</b>
+                    </div>
+                </div>
+                <div class="plan__line mt-4"></div>
+                <div class="">
+                  <div class="plan__subtitle">
+                    <b>Совместная работа</b>
+                    <ul class="ms-3">
+                      <li class="pt-2">Календарь</li>
+                      <li class="pt-2">Соцсеть компании</li>
+                      <li class="pt-2">Лента</li>
+                      <li class="pt-2">Доски</li>
+                      <li class="pt-2">База знаний</li>
+                    </ul>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Мессенджер</b>
+                    <ul class="ms-3">
+                      <li class="pt-2">Чат</li>
+                      <li class="pt-2">Каналы</li>
+                      <li class="pt-2">Битрикс24 Синк</li>
+                    </ul>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Коллабы</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Задачи и проекты</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>CRM</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>CoPilot</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Онлайн-подпись</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Диск</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Контакт-центр</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Сайты</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Интернет-магазин</b>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <div class="plan__subtitle">
+                  <b>Поддержка</b>
+                </div>
+              </div>
+          </div>
+        </div>
+        <div class="plan plan--cyan">
+          <div class="plan__header p-3 text-center">
+            <div class="service-card__title mt-2">
+                Стандартный
+            </div>
+            <p>Для совместной работы всей компании или рабочих групп</p>
+          </div>
+          <div class="plan__content p-4 d-flex flex-column justify-content-between">
+                <div>
+                  <div class="text-center p-2">
+                    <div>
+                      <b>50 <br> пользователей</b>
+                    </div>
+                    <div class="service-card__title mt-2">
+                      143 BYN/мес
+                    </div>
+                    <a href="#" class="btn-masco btn-masco--header rounded-pill btn-fill--up mt-4">
+                      <span>Создать</span>
+                    </a>
+                    <div class="mt-4">
+                      <b>100 ГБ</b>
+                    </div>
+                </div>
+                <div class="plan__line mt-4"></div>
+                <div class="">
+                  <div class="plan__subtitle">
+                    <b>Совместная работа</b>
+                    <ul class="ms-3">
+                      <li class="pt-2">Календарь</li>
+                      <li class="pt-2">Соцсеть компании</li>
+                      <li class="pt-2">Лента</li>
+                      <li class="pt-2">Доски</li>
+                      <li class="pt-2">База знаний</li>
+                    </ul>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Мессенджер</b>
+                    <ul class="ms-3">
+                      <li class="pt-2">Чат</li>
+                      <li class="pt-2">Каналы</li>
+                      <li class="pt-2">Битрикс24 Синк</li>
+                    </ul>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Коллабы</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Задачи и проекты</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>CRM</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>CoPilot</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Онлайн-подпись</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Диск</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Контакт-центр</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Сайты</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Интернет-магазин</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Маркетинг</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Документы Онлайн</b>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <div class="plan__subtitle">
+                  <b>Поддержка</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Администрирование</b>
+                </div>
+              </div>
+          </div>
+          
+        </div>
+        <div class="plan plan--cyan">
+          <div class="plan__header p-3 text-center">
+            <div class="service-card__title mt-2">
+              Профессиональный
+            </div>
+            <p>Для максимальной автоматизации всех процессов в компании</p>
+          </div>
+          <div class="plan__content p-4 d-flex flex-column justify-content-between">
+                <div>
+                  <div class="text-center p-2">
+                    <div>
+                      <b>100 <br> пользователей</b>
+                    </div>
+                    <div class="service-card__title mt-2">
+                      359 BYN/мес
+                    </div>
+                    <a href="#" class="btn-masco btn-masco--header rounded-pill btn-fill--up mt-4">
+                      <span>Создать</span>
+                    </a>
+                    <div class="mt-4">
+                      <b>1 024 ГБ</b>
+                    </div>
+                </div>
+                <div class="plan__line mt-4"></div>
+                <div class="">
+                  <div class="plan__subtitle">
+                    <b>Совместная работа</b>
+                    <ul class="ms-3">
+                      <li class="pt-2">Календарь</li>
+                      <li class="pt-2">Соцсеть компании</li>
+                      <li class="pt-2">Лента</li>
+                      <li class="pt-2">Доски</li>
+                      <li class="pt-2">База знаний</li>
+                    </ul>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Мессенджер</b>
+                    <ul class="ms-3">
+                      <li class="pt-2">Чат</li>
+                      <li class="pt-2">Каналы</li>
+                      <li class="pt-2">Битрикс24 Синк</li>
+                    </ul>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Коллабы</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Задачи и проекты</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>CRM</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>CoPilot</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Онлайн-подпись</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Диск</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Контакт-центр</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Сайты</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Интернет-магазин</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Маркетинг</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Документы Онлайн</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Онлайн-запись</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Сквозная аналитика</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Автоматизация</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>HR: Компания</b>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <div class="plan__subtitle">
+                  <b>Поддержка</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Администрирование</b>
+                </div>
+              </div>
+          </div>
+          
+        </div>
+        <div class="plan plan--blue">
+          <div class="plan__header p-3 text-center">
+            <div class="service-card__title mt-2">
+              Энтерпрайз
+            </div>
+            <p>Для максимальной автоматизации всех процессов в компании</p>
+          </div>
+          <div class="plan__content p-4 d-flex flex-column justify-content-between">
+                <div>
+                  <div class="text-center p-2">
+                    <div>
+                      <b>100 <br> пользователей</b>
+                    </div>
+                    <div class="service-card__title mt-2">
+                      959 BYN/мес
+                    </div>
+                    <a href="#" class="btn-masco btn-masco--header rounded-pill btn-fill--up mt-4">
+                      <span>Создать</span>
+                    </a>
+                    <div class="mt-4">
+                      <b>3 ТБ</b>
+                    </div>
+                </div>
+                <div class="plan__line mt-4"></div>
+                <div class="">
+                  <div class="plan__subtitle">
+                    <b>Совместная работа</b>
+                    <ul class="ms-3">
+                      <li class="pt-2">Календарь</li>
+                      <li class="pt-2">Соцсеть компании</li>
+                      <li class="pt-2">Лента</li>
+                      <li class="pt-2">Доски</li>
+                      <li class="pt-2">База знаний</li>
+                    </ul>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Мессенджер</b>
+                    <ul class="ms-3">
+                      <li class="pt-2">Чат</li>
+                      <li class="pt-2">Каналы</li>
+                      <li class="pt-2">Битрикс24 Синк</li>
+                    </ul>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Коллабы</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Задачи и проекты</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>CRM</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>CoPilot</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Онлайн-подпись</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Диск</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Контакт-центр</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Сайты</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Интернет-магазин</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Маркетинг</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Документы Онлайн</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Онлайн-запись</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Сквозная аналитика</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Автоматизация</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>HR: Компания</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Филиалы</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Энтерпрайз-кластер</b>
+                  </div>
+                  <div class="plan__subtitle">
+                    <b>Энтерпрайз-пакет</b>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <div class="plan__subtitle">
+                  <b>Поддержка</b>
+                </div>
+                <div class="plan__subtitle">
+                  <b>Администрирование</b>
+                </div>
+              </div>
+          </div>
+          
+        </div>
+      </div>
+    </div>
+ 
+  </div>
 
 
 
