--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -61,7 +61,7 @@
         <div class="row align-items-center h-100">
           <div class="slidercontainer rounded">
             <div class="brand-heading">
-              <h3 class="brand-heading__title">Более 100 компаний выбрали правильных интеграторов</h3>
+              <h3 class="brand-heading__title">Более 100 компаний выбрали Правильных интеграторов</h3>
             </div>
             <div class="slider">
               <div class="logos  brands-wrapper ">
