fix: correct first block button and slider

--- a/templates/home.html
+++ b/templates/home.html
@@ -50,19 +50,8 @@
             </p>
           </div>
           <div class="home-1_hero-newsletter">
-            <form action="#" class="newsletter-form-1">
-              <input type="email" placeholder="Телефон" class="form-control" />
-              <button class="btn-masco rounded-pill">
-                Получить консультацию
-              </button>
-            </form>
-            <span class="home-1_hero-newsletter__bottom-text"
-              ><img
-                src="{% static '/image/icons/icon-check-blue.svg' %}"
-                alt=""
-              />
-              Мы свяжемся с Вами и ответим на все вопросы</span
-            >
+             <a href="#" class="btn-masco btn-masco rounded-pill btn-fill--up">
+              <span>Личный кабинет</span></a>
           </div>
         </div>
       </div>
