--- a/bitrixsite/static/css/style.css
+++ b/bitrixsite/static/css/style.css
@@ -3764,7 +3764,7 @@ h6 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 30px;
+  /* padding: 0 30px; */
   text-align: center;
 }
 @media (min-width: 992px) {
