--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -3744,7 +3744,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 30px;
+  /* padding: 0 30px; */
   text-align: center;
 }
 @media (min-width: 992px) {
