--- a/staticfiles/scss/components/widgets/_testimonial.scss
+++ b/staticfiles/scss/components/widgets/_testimonial.scss
@@ -252,7 +252,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding:0 30px;
+    // padding:0 30px;
     text-align: center;
     @media (min-width:992px) {
         align-items: initial;
