--- a/templates/home.html
+++ b/templates/home.html
@@ -493,6 +493,63 @@
     </div>
   </div>
 </div>
+
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Home 4 : Testimonial Section
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+
+<div class="home-4_testimonial-section padding-top-120 padding-bottom-120 bg-cream" bis_skin_checked="1">
+      <div class="container" bis_skin_checked="1">
+        <div class="row justify-content-start text-start" bis_skin_checked="1">
+          <div class="col-xxl-7 col-lg-8 col-md-10" bis_skin_checked="1">
+            <div class="section-heading" bis_skin_checked="1">
+              <h2 class="section-heading__title text-start heading-md text-black heading-md--dm-sans">Learners like you achieve their goals through our courses</h2>
+              <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row gutter-y-30 justify-content-center" bis_skin_checked="1">
+          <div class="col-lg-6 col-md-10 aos-init aos-animate" data-aos="fade-left" data-aos-delay="100" bis_skin_checked="1">
+            <div class="testimonial-widget-2" bis_skin_checked="1">
+              <div class="testimonial-widget-2__star" bis_skin_checked="1">
+                <img src="{% static '/image/icons/star-yellow.svg' %}" alt="image alt">
+              </div>
+              <div class="testimonial-widget-2__body" bis_skin_checked="1">
+                <p>
+                  The online class professionals were truly a lifesaver. Without their expertise and kind help I could not have achieved the best results in my class. I followed what they said and they helped me get the best grades.
+                </p>
+                <div class="testimonial-widget-2__user-block" bis_skin_checked="1">
+                  <img src="{% static '/image/home-4/testimonial-authour-1 copy.png' %}" alt="image alt">
+                  <div class="author-info" bis_skin_checked="1">
+                    <h4 class="testimonial-widget-2__user-name">Kristin Watson</h4>
+                    <span class="testimonial-widget-2__user-position">Student of Cambridge University, UK</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-10 aos-init aos-animate" data-aos="fade-left" data-aos-delay="200" bis_skin_checked="1">
+            <div class="testimonial-widget-2" bis_skin_checked="1">
+              <div class="testimonial-widget-2__star" bis_skin_checked="1">
+                <img src="{% static '/image/icons/star-yellow.svg' %}" alt="image alt">
+              </div>
+              <div class="testimonial-widget-2__body" bis_skin_checked="1">
+                <p>
+                  I actually wanted to learn more than what was taught. I knew I couldn't be a designer, but I wanted to at least understand some of the basics. Then I bought UI / UX design course &amp; completed the whole course now I am a good designer.”
+                </p>
+                <div class="testimonial-widget-2__user-block" bis_skin_checked="1">
+                  <img src="{% static '/image/home-4/testimonial-authour-2 copy.png' %}" alt="image alt">
+                  <div class="author-info" bis_skin_checked="1">
+                    <h4 class="testimonial-widget-2__user-name">Kristin Watson</h4>
+                    <span class="testimonial-widget-2__user-position">UI/UX designer, USA</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~
     Home 1 : Portfolio Section
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
@@ -503,6 +560,7 @@
       alt="image alt"
     />
   </div>
+      
   <div class="container">
     <div
       class="section-heading section-heading--row text-center text-md-initial"
