feat: add contact section

--- a/templates/home.html
+++ b/templates/home.html
@@ -705,6 +705,28 @@
     </div>
   </div>
 </div>
+
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Home 8  : Contact Section 
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+<div class="cta-home-8 section-padding-120" bis_skin_checked="1">
+  <div class="container" bis_skin_checked="1">
+      <div class="cta-text-block" bis_skin_checked="1">
+        <h2 class="cta-title heading-md">Свяжитесь с нами прямо сейчас</h2>
+        <p>
+          Получите консультацию по вашим вопросам
+        </p>
+      </div>
+      <div class="home-1_hero-newsletter mt-5" bis_skin_checked="1">
+        <form action="#" class="newsletter-form-2">
+              <input type="email" placeholder="Телефон" class="form-control" />
+              <button class="btn-masco rounded-pill">
+                Получить консультацию
+              </button>
+            </form>
+      </div>
+  </div>
+</div>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Home 1  : FAQ Section 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
