feat: add contact widgets and correct the space

--- a/templates/home.html
+++ b/templates/home.html
@@ -709,24 +709,77 @@
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Home 8  : Contact Section 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-<div class="cta-home-8 section-padding-120" bis_skin_checked="1">
-  <div class="container" bis_skin_checked="1">
-      <div class="cta-text-block" bis_skin_checked="1">
-        <h2 class="cta-title heading-md">Свяжитесь с нами прямо сейчас</h2>
-        <p>
-          Получите консультацию по вашим вопросам
-        </p>
+
+<div class="cta-home-8 section-padding" bis_skin_checked="1">
+      <div class="container" bis_skin_checked="1">
+        <div class="cta-home-8-wrapper" bis_skin_checked="1">
+          <div class="cta-home-8-shape-wrapper" bis_skin_checked="1">
+            <div class="cta-home-8-shape" bis_skin_checked="1">
+              <img src="{% static '/image/cta/cta-8-shape.png' %}" alt="image alt">
+            </div>
+          </div>
+          <div class="cta-content-block" bis_skin_checked="1">
+            <div class="cta-text-block" bis_skin_checked="1">
+              <h2 class="cta-title heading-md text-cream">Contact us today to get a free consultation!</h2>
+              <p>
+                Send us a message to get answers to any of your questions &amp; we'll get back to you within 24-48 hours or as soon as possible.
+              </p>
+            </div>
+            <div class="cta-button-group" bis_skin_checked="1">
+              <a class="btn-masco btn-primary-l08 btn-fill--slide" href="#">
+                <span>Get In Touch</span>
+              </a>
+              <a class="btn-masco btn-outline-l08 btn-fill--slide-reverse" href="#">
+                <span>View Services</span>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="home-1_hero-newsletter mt-5" bis_skin_checked="1">
-        <form action="#" class="newsletter-form-2">
-              <input type="email" placeholder="Телефон" class="form-control" />
-              <button class="btn-masco rounded-pill">
-                Получить консультацию
-              </button>
-            </form>
+    </div>
+
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Contact  : Contact Section 
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+<div class="contact_feature-section section-padding" bis_skin_checked="1">
+      <div class="container" bis_skin_checked="1">
+        <div class="row justify-content-center gutter-y-default" bis_skin_checked="1">
+          <div class="col-lg-4 col-md-6 aos-init aos-animate" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="" bis_skin_checked="1">
+            <div class="feature-card" bis_skin_checked="1">
+              <div class="feature-card__icon" bis_skin_checked="1">
+                <img src="{% static '/image/contact-details/feature-icon-1.svg' %}" alt="image alt">
+              </div>
+              <div class="feature-card__body" bis_skin_checked="1">
+                <h3 class="feature-card__title">Chat with us</h3>
+                <p>We're waiting to help you every Monday-Friday from 9 am to 5 pm EST easily.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 aos-init aos-animate" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="" bis_skin_checked="1">
+            <div class="feature-card" bis_skin_checked="1">
+              <div class="feature-card__icon" bis_skin_checked="1">
+                <img src="{% static '/image/contact-details/feature-icon-2.svg' %}" alt="image alt">
+              </div>
+              <div class="feature-card__body" bis_skin_checked="1">
+                <h3 class="feature-card__title">Give us a call</h3>
+                <p>Give us a ring at <span>(+088-234-567-90)</span>. Every monday-friday from 9 am to 5 pm.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 aos-init aos-animate" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="" bis_skin_checked="1">
+            <div class="feature-card" bis_skin_checked="1">
+              <div class="feature-card__icon" bis_skin_checked="1">
+                <img src="{% static '/image/contact-details/feature-icon-3.svg' %}" alt="image alt">
+              </div>
+              <div class="feature-card__body" bis_skin_checked="1">
+                <h3 class="feature-card__title">Email Us</h3>
+                <p>Drop us an email at <span>example@gmail.com</span> and you'll receive a reply within 24 hours.</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-  </div>
-</div>
+    </div>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Home 1  : FAQ Section 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
