--- a/bitrixsite/static/css/style.css
+++ b/bitrixsite/static/css/style.css
@@ -12087,7 +12087,7 @@ div#loading img {
 
 /*=========== Home 8 : Cta ==========*/
 .cta-home-8 {
-  background-color: #a259ff;
+  background-color: #3147ff;
   padding-bottom: 60px;
 }
 @media (min-width: 768px) {
@@ -12097,7 +12097,7 @@ div#loading img {
   }
 }
 .cta-home-8 .cta-home-8-wrapper {
-  background-color: #a259ff;
+  background-color: #3147ff;
   border-radius: 5px;
   padding-top: 50px;
   padding-bottom: 0;
