fix: correct home-page

--- a/bitrixsite/static/scss/sections/home-8/_cta.scss
+++ b/bitrixsite/static/scss/sections/home-8/_cta.scss
@@ -19,7 +19,7 @@
         z-index: 10;
 
         @media (min-width: 768px) {
-            margin-bottom: -191px;
+            // margin-bottom: -191px;
             padding-top: 80px;
             padding-bottom: 80px;
             // transform: translateY(250px);
@@ -49,7 +49,7 @@
     }
 
     .cta-content-block {
-        max-width: 560px;
+        max-width: 700px;
         margin-right: auto;
         margin-left: auto;
         text-align: center;
